--- a/wiki/Muslim.wikitext
+++ b/wiki/Muslim.wikitext
@@ -1,30 +1,32 @@
-===Noun===
-'''muslim''' (plural: [[muslims]])
+==English==
+===Proper noun===
+'''Muslim''' (''plural'' [[Muslims]])
 
-# a person who is a believer in the religion called ''[[Islam]]''
+#A person who is a believer in [[Islam]].
 
-====Alternative spellings====
-*[[moslem]]
+====Variant spellings====
+*[[Moslem]]
 
 ====Translations====
 *Arabic: [[مسلم]]
 *[[Breton]]: [[muzulman]] ''m''
 *Dutch: [[moslim]] ''m''
 *Finnish: [[muslimi]]
-*French: [[musulman]]
+*French: [[Musulman]] ''m'', [[Musulmane]] ''f''
+*Italian: [[musulmano]] ''m'', [[musulmana]] ''f''
 *Polish: [[muzułmanin]] ''m'', [[muzułmanka]] ''f''
 *Romanian: [[musulman]] ''m''
 *Slovene: [[musliman]] ''m'', [[muslimanka]] ''f''
 
 ===Adjective===<!-- this may be another case of a noun used adjectivally. [[User:Hippietrail|Hippietrail]] 06:50, 9 Mar 2004 (UTC) -->
-'''muslim'''
+'''Muslim''' (''no [[comparative]] or [[superlative]]'')
 
-# relating to a belief in ''[[Islam]]''
+#Relating to a belief in [[Islam]].
 
 ====Translations====
 *[[Breton]]: [[muzulman]]
 *Dutch: [[islamitisch]], [[moslims]], [[muzulmaans]]
 *Finnish: [[islamilainen]]
-*French: [[musulman]]
+*French: [[musulman]] ''m''
 *Polish: [[islamski]], [[muzułmański]] ''m''
 *Slovene: [[islamski]] ''m'', [[islamska]] ''f'', [[islamsko]] ''n'', [[muslimanski]] ''m'', [[muslimanska]] ''f'', [[muslimansko]] ''n''
