transferred content to "Muslim" <Moslem#6739>

--- a/wiki/Moslem.wikitext
+++ b/wiki/Moslem.wikitext
@@ -1,7 +1,4 @@
-== [[adjective]] ==
-# same as ''[[muslim]]''
+==English==
+'''Moslem'''
 
-=== Translations ===
-*[[Interlingua]]: [[muslim]]
-*[[Finnish]]: [[muslimi]]
-*[[Spanish]]: [[musulman]]
+#Variant spelling of '''[[Muslim]]'''
