content moved here from "Moslem"; corrected es: and added es: adj <Muslim#6740>

--- a/wiki/Muslim.wikitext
+++ b/wiki/Muslim.wikitext
@@ -13,10 +13,12 @@
 *Dutch: [[moslim]] ''m''
 *Finnish: [[muslimi]]
 *French: [[Musulman]] ''m'', [[Musulmane]] ''f''
+*[[Interlingua]]: muslim
 *Italian: [[musulmano]] ''m'', [[musulmana]] ''f''
 *Polish: [[muzułmanin]] ''m'', [[muzułmanka]] ''f''
 *Romanian: [[musulman]] ''m''
 *Slovene: [[musliman]] ''m'', [[muslimanka]] ''f''
+*Spanish: [[musulmán]] ''m'', [[musulmana]] ''f''
 
 ===Adjective===<!-- this may be another case of a noun used adjectivally. [[User:Hippietrail|Hippietrail]] 06:50, 9 Mar 2004 (UTC) -->
 '''Muslim''' (''no [[comparative]] or [[superlative]]'')
@@ -30,3 +32,4 @@
 *French: [[musulman]] ''m''
 *Polish: [[islamski]], [[muzułmański]] ''m''
 *Slovene: [[islamski]] ''m'', [[islamska]] ''f'', [[islamsko]] ''n'', [[muslimanski]] ''m'', [[muslimanska]] ''f'', [[muslimansko]] ''n''
+*Spanish: [[musulmán]] ''m'', [[musulmana]] ''f''
