--- a/wiki/sleepy.wikitext
+++ b/wiki/sleepy.wikitext
@@ -7,5 +7,6 @@
 *[[tired]]
 
 ===Translations===
-*[[German]]: [[schläfrig]]
-*[[Dutch]]: [[slaperig]]
+*Dutch: [[slaperig]]
+*German: [[schläfrig]]
+*Swedish: [[trött]], [[sömnig]]
