noun -> proper noun; translation tables (many translations need to be checked and tabulated); +it: <Qur'an#35840>

--- a/wiki/Qur%27an.wikitext
+++ b/wiki/Qur%27an.wikitext
@@ -1,17 +1,65 @@
-=== Noun ===
-'''qur'an''' The holy book of the [[Muslims]].
+==English==
+===Proper noun===
+'''the Qur'an'''
 
-====Alternative spellings====
-*[[quraan]]
-*[[koran]]
-*[[quran]]
-*[[alcoran]] (obsolete)
+====Variant spellings====
+*[[Quraan]]
+*[[Koran]]
+*[[Quran]]
+*[[Alcoran]] (''obsolete'')
 
-#Usually with the definite article, the [[Islamic]] Holy book.
-#A copy of the Qur'an.
+#The [[Islamic]] holy book.
+#A copy of this book.
 
 ==== Translations ====
-*Arabic: [[القُرْآن]] (one), [[قُرْآن]] (two)<!-- numbers spelled because bidi algorithm messes up digits -->
+
+'''the Islamic holy book'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Arabic: [[القُرْآن]]
+*French: le [[Coran]] ''m''
+*German: der [[Koran]] ''m''
+*Italian: il [[Corano]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Romanian: [[Coranul]]
+*Spanish: el [[Corán]] ''m''
+*Swedish: [[koranen]]
+|}
+|}
+
+'''copy of this book'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Arabic: [[قُرْآن]]
+*French: le [[Coran]] ''m''
+*German: der [[Koran]] ''m''
+*Italian: il [[Corano]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Romanian: [[Coran]]
+*Spanish: el [[Corán]] ''m''
+*Swedish: [[koran]] ''c''
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.
+
 *[[Basque]]: [[Koran]]
 *Bulgarian: [[Коран]] ''m''
 *Chinese: [[古蘭經]], [[古兰经]] (gǔlánjīng); [[可蘭經]], [[可兰经]] (kělánjīng)
@@ -19,17 +67,12 @@
 *Dutch: de [[Koran]]
 *[[Esperanto]]: [[Korano]]
 *Finnish: [[koraani]]
-*French: le [[coran]] ''m''
-*German: der [[Koran]] ''m''
 *Hebrew: [[הקוראן]] (one), [[קוראן]] (two))<!-- numbers spelled because bidi algorithm messes up digits -->
 *Indonesian: [[Al Qur'an]]
 *Japanese: [[クルアーン]] (kuruan)
 *Korean: [[꾸란]]
 *Polish: [[koran]]
-*Romanian: [[Coranul]] (1), [[Coran]] (2)
 *[[Romanica]]: [[Coran]] ''m''
 *Slovene: [[Koran]] ''m''
-*Spanish: el [[Corán]] ''m''
-*Swedish: [[koranen]] (1), [[koran]] ''c'' (2)
 
 [[nl:Qur'an]]
